--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,8 @@ name: Daily Market Data Crawler
 
 on:
   schedule:
-    - cron: '0 9 * * 1-5'  # 每個工作日（週一到週五）的 UTC 1:00 運行（相當於台灣時間 9:00）
-  workflow_dispatch:  # 允許手動觸發
+    - cron: '0 1 * * 1-5'  # 每个工作日（周一到周五）的 UTC 1:00 运行
+  workflow_dispatch:  # 允许手动触发
 
 jobs:
   run-crawler:
@@ -28,8 +28,14 @@ jobs:
     
     - name: Install ChromeDriver
       run: |
-        CHROME_VERSION=$(google-chrome --version | awk '{ print $3 }' | awk -F'.' '{ print $1 }')
+        CHROME_VERSION=$(google-chrome --version | awk '{ print $3 }' | awk -F'.' '{ print $1"."$2"."$3 }')
+        echo "Chrome version: $CHROME_VERSION"
         CHROMEDRIVER_VERSION=$(curl -s "https://chromedriver.storage.googleapis.com/LATEST_RELEASE_$CHROME_VERSION")
+        echo "ChromeDriver version: $CHROMEDRIVER_VERSION"
+        if [ -z "$CHROMEDRIVER_VERSION" ]; then
+          echo "Failed to get ChromeDriver version, using latest"
+          CHROMEDRIVER_VERSION=$(curl -s "https://chromedriver.storage.googleapis.com/LATEST_RELEASE")
+        fi
         curl -L -o chromedriver.zip "https://chromedriver.storage.googleapis.com/${CHROMEDRIVER_VERSION}/chromedriver_linux64.zip"
         unzip chromedriver.zip
         chmod +x chromedriver
