--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,57 +1,16 @@
-name: Daily Market Data Crawler
-
-on:
-  schedule:
-    - cron: '0 1 * * 1-5'  # 每个工作日（周一到周五）的 UTC 1:00 运行
-  workflow_dispatch:  # 允许手动触发
-
-jobs:
-  run-crawler:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.9'
-    
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    
-    - name: Install Chrome
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y google-chrome-stable
-    
     - name: Install ChromeDriver
       run: |
         CHROME_VERSION=$(google-chrome --version | awk '{ print $3 }' | awk -F'.' '{ print $1 }')
         echo "Chrome major version: $CHROME_VERSION"
-        CHROMEDRIVER_VERSION=$(curl -s "https://chromedriver.storage.googleapis.com/LATEST_RELEASE_$CHROME_VERSION")
-        echo "ChromeDriver version: $CHROMEDRIVER_VERSION"
+        CHROMEDRIVER_VERSION=$(curl -s "https://chromedriver.storage.googleapis.com/LATEST_RELEASE_$CHROME_VERSION" || echo "")
+        
         if [ -z "$CHROMEDRIVER_VERSION" ]; then
-          echo "Failed to get ChromeDriver version, using latest"
+          echo "Failed to get ChromeDriver version for major version $CHROME_VERSION, using latest"
           CHROMEDRIVER_VERSION=$(curl -s "https://chromedriver.storage.googleapis.com/LATEST_RELEASE")
         fi
+        
         echo "Final ChromeDriver version: $CHROMEDRIVER_VERSION"
         curl -L -o chromedriver.zip "https://chromedriver.storage.googleapis.com/${CHROMEDRIVER_VERSION}/chromedriver_linux64.zip"
         unzip chromedriver.zip
         chmod +x chromedriver
         sudo mv chromedriver /usr/local/bin/
-    
-    - name: Run crawler
-      env:
-        LINE_CHANNEL_ACCESS_TOKEN: ${{ secrets.LINE_CHANNEL_ACCESS_TOKEN }}
-        LINE_USER_ID: ${{ secrets.LINE_USER_ID }}
-        IMGUR_CLIENT_ID: ${{ secrets.IMGUR_CLIENT_ID }}
-      run: python crawler.py
-    
-    - name: Commit and push if changed
-      run: |
-        git config --global user.email "github-actions@github.com"
-        git config --global user.name "GitHub Actions"
-        git add market_data.csv
-        git diff --quiet && git diff --staged --quiet || (git commit -m "Update market data" && git push)
