--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,13 +23,9 @@ jobs:
     
     - name: Install Chrome
       run: |
-        # 添加Google的签名密钥
-        wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
-        # 添加Google Chrome的源
-        echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" | sudo tee /etc/apt/sources.list.d/google-chrome.list
-        # 更新包列表并安装指定版本的Chrome
-        sudo apt-get update
-        sudo apt-get install -y google-chrome-stable=114.0.5735.90-1
+        # 手动下载并安装特定版本的Chrome
+        wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+        sudo dpkg -i google-chrome-stable_current_amd64.deb || sudo apt-get install -f
     
     - name: Install ChromeDriver
       run: |
