--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         token: ${{ secrets.PAT }}  # 使用PAT進行checkout
+        fetch-depth: 0  # 獲取所有歷史記錄，以便進行合併
     
     - name: Set up Python
       uses: actions/setup-python@v2
@@ -53,6 +54,11 @@ jobs:
         # 清理下载的zip文件和解压后的目录
         rm -r chromedriver.zip chromedriver-linux64
     
+    - name: Install fonts
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y fonts-dejavu
+    
     - name: Run crawler with Chrome
       env:
         LINE_CHANNEL_ACCESS_TOKEN: ${{ secrets.LINE_CHANNEL_ACCESS_TOKEN }}
@@ -65,6 +71,8 @@ jobs:
         git config --global user.email "github-actions@github.com"
         git config --global user.name "GitHub Actions"
         git add market_data.csv
-        git diff --quiet && git diff --staged --quiet || (git commit -m "Update market data" && git push)
+        git diff --quiet && git diff --staged --quiet || (git commit -m "Update market data")
+        git pull --rebase  # 拉取並重新應用本地更改
+        git push
       env:
         GITHUB_TOKEN: ${{ secrets.PAT }}  # 使用PAT進行推送
