--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,7 +57,7 @@ jobs:
     - name: Install fonts
       run: |
         sudo apt-get update
-        sudo apt-get install -y fonts-dejavu
+        sudo apt-get install -y fonts-noto-cjk
     
     - name: Run crawler with Chrome
       env:
