--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,8 +26,9 @@ jobs:
     
     - name: Install Google Chrome
       run: |
+        CHROME_VERSION="132.0.6834.110-1"
         sudo apt-get update
-        sudo apt-get install -y google-chrome-stable
+        sudo apt-get install -y google-chrome-stable=${CHROME_VERSION}
     
     - name: Install ChromeDriver
       run: |
