--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,9 +24,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Install CJK fonts
-      run: |
-        winget install --id Google.NotoCJK
+    # - name: Install CJK fonts
+    #   run: |
+    #     winget install --id Google.NotoCJK
 
     - name: Set up Chrome and ChromeDriver
       uses: browser-actions/setup-chrome@v1
